admin2@applab.student2.com/src/AppExchange Laboratory Recruiting App Components/objects/Job_Application__c.object
<CustomObject>
    <fields>
        <fullName>Candidate__c</fullName>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Application_Number__c</fullName>
        <externalId>true</externalId>
        <indexed>true</indexed>
        <label>Legacy Application Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_References__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this Job Application need references for further follow up?</description>
        <inlineHelpText>Check this field on to tag this Job Application so that references can be requested.</inlineHelpText>
        <label>Needs References</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Interviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interviews Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Extended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Position Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Job Application</label>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Job Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>